--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body onload="empezar()" style="margin:0; padding:0; background: black;">
     <center>
-        <canvas id="can" width="980" height="1000" style="border: 5px solid black" onclick="empezar()"></canvas>
+        <canvas id="can" width="980" height="1000" style="border: 5px solid black" onclick="empezar2()"></canvas>
     </center>
     <script src="script.js"></script>
 </body>
