--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
 <head>
-    <title>colores</title>
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>STR</title>
 </head>
-<body onload="empezar()" style="margin:0; padding:0; background: black;">
-    <center>
-        <canvas id="can" width="980" height="1000" style="border: 5px solid black" onclick="empezar2()"></canvas>
-    </center>
+<body onload="empezar()" style="background: black">
+    <canvas id="can" width="1000" height="1000" style="border: 0px solid black; background:rgb(0, 255, 255)" onclick="klik()"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
