--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <title>STR</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
-<body onload="empezar()" style="background: black">
-    <canvas id="can" width="1000" height="1000" style="border: 0px solid black; background:rgb(0, 255, 255)" onclick="klik(event)"></canvas>
+<body onload="empezar1()">
+    <canvas id="can" width="1000" height="1000" style="border: 5px solid black; position: fixed; top: 0px; left: 119px; width: 541px; height: 541px;"></canvas>
     <script src="script.js"></script>
+
 </body>
 </html>
