--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body onload="empezar1()">
-    <canvas id="can" width="1000" height="1000" style="border: 5px solid black; position: fixed; top: 0px; left: 119px; width: 541px; height: 541px;"></canvas>
+    <button onmousedown="ver()" onmouseup="noVer()">VER</button>
+    <canvas id="can" width="1000" height="1000" style="border: 0px solid black; position: fixed; top: 0px; left: 119px; width: 541px; height: 541px;"></canvas>
     <script src="script.js"></script>
 
 </body>
