--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html lang="es">
 <head>
+    <!-- Manifest (necesario para que Android/Chrome reconozca la PWA) -->
+<link rel="manifest" href="/manifest.webmanifest">
+
+<!-- Color del tema (barra de estado en Android) -->
+<meta name="theme-color" content="#0a84ff">
+
+<!-- iOS: abrir como app y nombre/icono -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Puntos y Cajas">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
     <title>Puntos y Cajas — Móvil</title>
@@ -60,3 +72,4 @@
     <script src="script.js" defer></script>
 </bodystyle="touch-action:none;>
 </html>
+
