--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>M.E.</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -11,3 +12,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
