--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
 <html lang="es">
 <head>
     <meta charset="utf-8" />
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="can"></canvas>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
